--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment1"
-        android:name="fragments.fragment.FragmentMain" />
+        android:name="com.example.nasaapp.ui.fragments.fragment.FragmentMain" />
 
 </FrameLayout>
