--- a/app/src/main/res/layout/fragment_favorite_photo.xml
+++ b/app/src/main/res/layout/fragment_favorite_photo.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
